vanilla -> starter app